--- a/index.html
+++ b/index.html
@@ -134,7 +134,7 @@
     </main>
 
     <footer>
-      <!--<div class="footer1">
+     <div class="footer1">
         <a
           class="img1"
           href="mailto:jorge_william92@hotmail.com?subject=Assunto%20da%20mensagem&body=Corpo%20da%20mensagem"
@@ -149,8 +149,8 @@
         /></a>
         <!--<a class="img1" href="https://www.instagram.com/ws92ba/" target="_blank"
           ><img src="./imagens/instagram.png" alt="Instagram"
-        /></a>
-      </div>-->
+        /></a> -->
+      </div>
 
       <div class="footer2">
         <p>
