--- a/index.html
+++ b/index.html
@@ -112,7 +112,7 @@
             height: 0;
           "
         >
-          <div style="padding: 56.25% 0 0 0; position: relative">
+          <div style="padding: 0 0 0 0; <!--position: relative--> ">
             <iframe
               src="https://www.youtube.com/embed/7ttQ8_cUKAw?si=jUHS1DPLD0EgNmVE"
               frameborder="0"
